--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /public/build
 /public/hot
 /public/storage
+/public/assets/images
 /storage/*.key
 /vendor
 .env
@@ -18,3 +19,4 @@ yarn-error.log
 /.fleet
 /.idea
 /.vscode
+/.zip
